--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     </ul>
     </div>
 </header>
-<img class="img_jo" src="/img/Снимок%20экрана%202024-07-19%20202215.png" alt="">
+<img class="img_jo" src="./img/Снимок%20экрана%202024-07-19%20202215.png" alt="">
 <div class="ready_set1">
     <img src="/img/Group%20125.png" alt="" class="card_icon">
     <h3 class="card_title">Готовые наборы &rarr;</h3>
