--- a/index.html
+++ b/index.html
@@ -16,18 +16,18 @@
         </div>
         <div class="frame_block">
             <a href="" class="piter">
-                <img src="/img/place.png" alt="">Санкт-Петербург
+                <img src="./img/place.png" alt="">Санкт-Петербург
             </a>
             <a href="" class="Num">
-                <img src="/img/Group%206.png" alt="">+8 812 309-82-88
+                <img src="./img/Group%206.png" alt="">+8 812 309-82-88
             </a>
             <a target="_blank" href="http://localhost:63342/Macorons%20shop/page/basket.html?_ijt=ceja7o0vrk9ngsef7d0gs8t80j&_ij_reload=RELOAD_ON_SAVE" class="basket">
-                <img src="/img/bag.png" alt="">Корзина
+                <img src="./img/bag.png" alt="">Корзина
             </a>
             <div class="link_vek">
-                <a href=""><img src="/img/tg.png" alt=""></a>
-                <a href=""><img src="/img/vk.png" alt=""></a>
-                <a href=""><img src="/img/ok.png" alt=""></a>
+                <a href=""><img src="./img/tg.png" alt=""></a>
+                <a href=""><img src="./img/vk.png" alt=""></a>
+                <a href=""><img src="./img/ok.png" alt=""></a>
             </div>
         </div>
     </div>
@@ -46,7 +46,7 @@
         </li>
         <li class="sum_menu">СОБРАТЬ НАБОР</li>
     </ul>
-    <img class="logo_mocoron" src="/img/лого.png" alt="">
+    <img class="logo_mocoron" src="./img/лого.png" alt="">
     <ul class="menu_block">
         <li class="sum_menu">СОЗДАТЬ ДИЗАЙН</li>
         <li class="sum_menu">КОМПАНИЯМ &or;
@@ -324,13 +324,13 @@
             <span class="footer_time">с 9:00 до 18:00</span>
             <div class="footer_apps">
                 <a href="" class="footer_app">
-                    <img src="/img/tg.png" alt="">
+                    <img src="./img/tg.png" alt="">
                 </a>
                 <a href="" class="footer_app">
-                    <img src="/img/vk.png" alt="">
+                    <img src="./img/vk.png" alt="">
                 </a>
                 <a href="" class="footer_app">
-                    <img src="/img/ok.png" alt="">
+                    <img src="./img/ok.png" alt="">
                 </a>
             </div>
         </div>
