--- a/index.html
+++ b/index.html
@@ -73,32 +73,32 @@
 </header>
 <img class="img_jo" src="./img/Снимок%20экрана%202024-07-19%20202215.png" alt="">
 <div class="ready_set1">
-    <img src="/img/Group%20125.png" alt="" class="card_icon">
+    <img src="./img/Group%20125.png" alt="" class="card_icon">
     <h3 class="card_title">Готовые наборы &rarr;</h3>
     <p class="card_span">Готовые наборы со скидкой. <br> Вы можете подобрать набор на подходящий случай.</p>
 </div>
 <div class="ready_set2">
-    <img src="/img/Group%20122.png" alt="" class="card_icon">
+    <img src="./img/Group%20122.png" alt="" class="card_icon">
     <h3 class="card_title">Собрать свой набор &rarr;</h3>
     <p class="card_span">Выбрать количество макарун, и выбрать вкусы</p>
 </div>
 <div class="ready_set3">
-    <img src="/img/Group%20124.png" alt="" class="card_icon">
+    <img src="./img/Group%20124.png" alt="" class="card_icon">
     <h3 class="card_title">Набор с индивидуальной печатью &rarr;</h3>
     <p class="card_span">Собрать набор макарон с уникальным дизайном. </p>
 </div>
 <div class="ready_set4">
-    <img src="/img/Group%20123.png" alt="" class="card_icon">
+    <img src="./img/Group%20123.png" alt="" class="card_icon">
     <h3 class="card_title">Свадебные предложения &rarr;</h3>
     <p class="card_span">Нежные пирожные макаронс с разными вкусами для <br> украшения вашего свадебного торжества</p>
 </div>
 <div class="ready_set5">
-    <img src="/img/Group%20131.png" alt="" class="card_icon">
+    <img src="./img/Group%20131.png" alt="" class="card_icon">
     <h3 class="card_title">Корпоративные подарки &rarr;</h3>
     <p class="card_span">От 85 руб за шт. С уникальным дизайном. <br> Приятный комплимент для коллег и партнеров</p>
 </div>
 <div class="ready_set6">
-    <img src="/img/Group%20130.png" alt="" class="card_icon">
+    <img src="./img/Group%20130.png" alt="" class="card_icon">
     <h3 class="card_title">Оптовые поставки &rarr;</h3>
     <p class="card_span">Предложение для кофеен, кафе, отелей и т.д. <br>Посмотрите условия сотрудничества и отзывы.</p>
 </div>
