--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
             <span class="shop_span">9 макаронс + 3 зефира в наборе. Вкусы ассорти</span>
             <div class="shop_kit">
                 <div class="shop_price">790 руб</div>
-                <button id="button" class="shop_buy"><img src="http://localhost:63342/img/bag.png" alt="">Купить</button>
+                <button id="button" class="shop_buy"><img src="./page/basket.html" alt="">Купить</button>
             </div>
         </div>
     <div class="shop_block">
