--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <a href="" class="Num">
                 <img src="./img/Group%206.png" alt="">+8 812 309-82-88
             </a>
-            <a target="_blank" href="http://localhost:63342/Macorons%20shop/page/basket.html?_ijt=ceja7o0vrk9ngsef7d0gs8t80j&_ij_reload=RELOAD_ON_SAVE" class="basket">
+            <a target="_blank" href="./page/basket.html" class="basket">
                 <img src="./img/bag.png" alt="">Корзина
             </a>
             <div class="link_vek">
@@ -185,7 +185,7 @@
             <span class="shop_span">10 макаронс + 3 эклера в коробке. Вкусы ассорти</span>
             <div class="shop_kit">
                 <div class="shop_price">960 руб</div>
-                <button class="shop_buy"><img src="http://localhost:63342/img/bag.png" alt="">Купить</button>
+                <button class="shop_buy"><img src="./page/basket.html" alt="">Купить</button>
             </div>
         </div>
     <div class="shop_block">
@@ -194,7 +194,7 @@
             <span class="shop_span">3 макаронс + 2 эклера. Вкусы ассорти</span>
             <div class="shop_kit">
                 <div class="shop_price">690 руб</div>
-                <button class="shop_buy"><img src="http://localhost:63342/img/bag.png" alt="">Купить</button>
+                <button class="shop_buy"><img src="./page/basket.html" alt="">Купить</button>
             </div>
         </div>
     <div class="shop_block">
@@ -203,7 +203,7 @@
             <span class="shop_span">20 макаронс в коробке. Вкусы ассорти</span>
             <div class="shop_kit">
                 <div class="shop_price">1190 руб</div>
-                <button class="shop_buy"><img src="http://localhost:63342/img/bag.png" alt="">Купить</button>
+                <button class="shop_buy"><img src="./page/basket.html" alt="">Купить</button>
             </div>
         </div>
     <div class="shop_block">
@@ -212,7 +212,7 @@
             <span class="shop_span">12 макаронс в коробке. Вкусы ассорти</span>
             <div class="shop_kit">
                 <div class="shop_price">1190 руб</div>
-                <button class="shop_buy"><img src="http://localhost:63342/img/bag.png" alt="">Купить</button>
+                <button class="shop_buy"><img src="./page/basket.html" alt="">Купить</button>
             </div>
         </div>
     <div class="shop_block">
@@ -221,7 +221,7 @@
             <span class="shop_span">10 макаронс + 3 эклера в коробке. Вкусы ассорти</span>
             <div class="shop_kit">
                 <div class="shop_price">960 руб</div>
-                <button class="shop_buy"><img src="http://localhost:63342/img/bag.png" alt="">Купить</button>
+                <button class="shop_buy"><img src="./page/basket.html" alt="">Купить</button>
             </div>
         </div>
     </div>
