--- a/index.html
+++ b/index.html
@@ -308,15 +308,15 @@
         <div class="footer_icons">
             <div class="footer_icon_box">
                 <div class="footer_icon_block">
-                    <img src="/img/Frame.png" alt="" class="footer_icon_img">
+                    <img src="./img/Frame.png" alt="" class="footer_icon_img">
                     <span class="footer_icon_title">Готовим в ручную <br> и с любовью</span>
                 </div>
                 <div class="footer_icon_block">
-                    <img src="/img/Group%2018.png" alt="" class="footer_icon_img">
+                    <img src="./img/Group%2018.png" alt="" class="footer_icon_img">
                     <span class="footer_icon_title">Бережная <br> доставка</span>
                 </div>
                 <div class="footer_icon_block">
-                    <img src="/img/Vector%20(4).png" alt="" class="footer_icon_img">
+                    <img src="./img/Vector%20(4).png" alt="" class="footer_icon_img">
                     <span class="footer_icon_title">100% натуральные <br> ингредиенты</span>
                 </div>
             </div>
